# dealscraper

./: .gitignore  README.md  pyproject.toml  test.html
.github/workflows/: main.yml
dealscraper/: __main__.py
dealscraper/backend/: __init__.py  deal.py  dealscraper.py
dealscraper/backend/helpers/: __init__.py  filter.py  output.py
dealscraper/backend/scraper/: __init__.py  deal.py  dealscraper.py
dealscraper/config/: __init__.py  boilerplate_config.py  builder.py  handler.py
dealscraper/data/: __init__.py  resources.py  search_args.py
settings/: base_settings.yml
