[tool.poetry]
name = "dealscraper"
version = "0.1.0"
description = ""
authors = ["Garrett Rumschik <rumschik.2@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.2"
lxml = "^5.2.2"
python-dateutil = "^2.9.0.post0"
PyYAML = "^6.0.1"
scikit-learn = "^1.5.0"
nltk = "^3.8.1"
scipy = "^1.13.0"
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
cerberus = "^1.3.5"
tqdm = "^4.66.4"
pipenv = "^2023.12.1"
flake8 = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
